@@ -4,15 +4,12 @@ import com.gmail.nossr50.datatypes.player.McMMOPlayer;
 import com.gmail.nossr50.locale.LocaleLoader;
 import com.gmail.nossr50.util.commands.CommandUtils;
 import com.gmail.nossr50.util.player.UserManager;
-import com.google.common.collect.ImmutableList;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
-import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
 import java.util.List;
 
 public abstract class ToggleCommand implements TabExecutor {
@@ -26,7 +23,10 @@ public abstract class ToggleCommand implements TabExecutor {
                 }
 
                 if (!hasSelfPermission(sender)) {
-                    sender.sendMessage(command.getPermissionMessage());
+                    String commandPermissionMessage = command.getPermissionMessage();
+                    if (commandPermissionMessage != null) {
+                        sender.sendMessage(commandPermissionMessage);
+                    }
                     return true;
                 }
 
@@ -39,7 +39,10 @@ public abstract class ToggleCommand implements TabExecutor {
 
             case 1:
                 if (!hasOtherPermission(sender)) {
-                    sender.sendMessage(command.getPermissionMessage());
+                    String commandPermissionMessage = command.getPermissionMessage();
+                    if (commandPermissionMessage != null) {
+                        sender.sendMessage(commandPermissionMessage);
+                    }
                     return true;
                 }
 
@@ -66,10 +69,9 @@ public abstract class ToggleCommand implements TabExecutor {
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
         if (args.length == 1) {
-            List<String> playerNames = CommandUtils.getOnlinePlayerNames(sender);
-            return StringUtil.copyPartialMatches(args[0], playerNames, new ArrayList<>(playerNames.size()));
+            return CommandUtils.getOnlinePlayerNames(sender).stream().filter(s -> s.startsWith(args[0])).toList();
         }
-        return ImmutableList.of();
+        return List.of();
     }
 
     protected abstract boolean hasOtherPermission(CommandSender sender);
